<?xml version="1.0"?>
<package format="2">
  <name>agv_controller</name>
  <version>0.0.0</version>
  <description>AGV controller package for MYAGV system - handles navigation, marker detection, and system coordination</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="sujini7773@gmail.com">er</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/agv_controller</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="sujini7773@gmail.com">er</author>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>system_msgs</build_depend>
  
  <!-- Build export dependencies -->
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>system_msgs</build_export_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>system_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
